bdr.BDR2.scala.error
Compilation error:
BDR2:2: error: type mismatch;
 found   : String("R")
 required: Unit
  case"R"=>droite();avance()
      ^BDR2:3: error: type mismatch;
 found   : String("L")
 required: Unit
  case"L"=>gauche();avance()
      ^BDR2:4: error: type mismatch;
 found   : String("I")
 required: Unit
  case"I"=>retourne();avance()
      ^BDR2:5: error: type mismatch;
 found   : String("A")
 required: Unit
  case"A"=>avance()
      ^BDR2:6: error: type mismatch;
 found   : String("B")
 required: Unit
  case"B"=>avance();avance()
      ^BDR2:7: error: type mismatch;
 found   : String("C")
 required: Unit
  case"C"=>avance();avance();avance()
      ^BDR2:8: error: type mismatch;
 found   : String("D")
 required: Unit
  case"D"=>avance();avance();avance();avance()
      ^BDR2:9: error: type mismatch;
 found   : String("E")
 required: Unit
  case"E"=>avance();avance();avance();avance();avance()
      ^BDR2:10: error: type mismatch;
 found   : String("F")
 required: Unit
  case"F"=>avance();avance();avance();avance();avance();avance()
      ^BDR2:11: error: type mismatch;
 found   : String("Z")
 required: Unit
  case"Z"=>recule()
      ^BDR2:12: error: type mismatch;
 found   : String("Y")
 required: Unit
  case"Y"=>recule();recule()
      ^BDR2:13: error: type mismatch;
 found   : String("X")
 required: Unit
  case"X"=>recule();recule();recule()
      ^BDR2:14: error: type mismatch;
 found   : String("W")
 required: Unit
  case"W"=>recule();recule();recule();recule()
      ^BDR2:15: error: type mismatch;
 found   : String("V")
 required: Unit
  case"V"=>recule();recule();recule();recule();recule()
      ^BDR2:16: error: type mismatch;
 found   : String("U")
 required: Unit
  case"U"=>recule();recule();recule();recule();recule();recule()
      ^BDR2:17: error: not found: value case_=>
  case_=>
  ^